##-- MAKE FRAGMENT FOR AMOS RULES
include $(top_srcdir)/config/amos.mk


##-- TO BE INSTALLED
dist_bin_SCRIPTS = \
	ace2contig.pl \
	amos2frg.pl \
	amos2mates.pl \
	amos2sq.pl \
        amos2ace.pl \
	arachne2ctg.pl \
	arachne2scaff.pl \
	benchmark2arachne.pl \
	benchmark2ca.pl \
	benchmark2mates.pl \
	benchmark2ta.pl \
	ca2ace.pl \
	ca2ctg.pl \
	ca2mates.pl \
	ca2scaff.pl \
	ca2ta.pl \
	cgb2ctg.pl \
	contig2contig.pl \
	ctg2fasta.pl \
	ctg2umdcontig.pl \
	frg2fasta.pl \
	frg2ta.pl \
	ta2ace.pl \
	tarchive2amos.pl \
	tarchive2ca.pl \
	toAmos.pl \
	toArachne.pl \
	scaff2fasta.pl \
	parsecasm.pl \
	castats.pl \
	ca2singletons.pl \
	phd2afg.pl


##-- END OF MAKEFILE --##
