##-- MAKE FRAGMENT FOR AMOS RULES
include $(top_srcdir)/config/amos.mk


##-- TO BE INSTALLED
dist_bin_SCRIPTS = \
	excl_seqs.pl \
	findChimeras.pl \
	find_ends.pl \
	fixfrg.pl \
	iterate.pl \
	kmers.pl \
	singles.pl \
	tab2ovls.pl \
	trimends.pl \
	trimfrg.pl \
	vecfix.pl


##-- END OF MAKEFILE --##