##-- MAKE FRAGMENT FOR AMOS RULES
include $(top_srcdir)/config/amos.mk


#-- TO BE INSTALLED
dist_amoslib_SCRIPTS = \
	AmosLib.pm \
	ParseFasta.pm \
	AmosFoundation.pm \
	xfig.pm

dist_tigrlib_SCRIPTS = \
	FASTAgrammar.pm \
	FASTAiterator.pm \
	FASTAreader.pm \
	FASTArecord.pm \
	FASTAwriter.pm \
	Foundation.pm


##-- END OF MAKEFILE --##
